# JunoLang

./: .gitignore  Cargo.toml  README.md  flake.nix  todo
libjuno/: Cargo.toml
libjuno/src/: builtin_registry.rs  compile.rs  get_symbols.rs  lib.rs
libjuno/src/ast/: block.rs  expr.rs  item.rs  mod.rs  span.rs  stmt.rs  types.rs
libjuno/src/diagnostics/: builder.rs  code.rs  context.rs  diagnostic.rs  engine.rs  mod.rs  provider.rs  rule.rs  severity.rs
libjuno/src/diagnostics/parser/: classifier.rs  messages.rs  mod.rs  parser.rs  span.rs  suggestion.rs
libjuno/src/diagnostics/providers/: mod.rs  syntax.rs
libjuno/src/grammar/: juno.pest  mod.rs
libjuno/src/ir/: backend.rs  declaration.rs  error.rs  expr.rs  function.rs  mod.rs  runtime.rs  scope.rs  stmt.rs  structs.rs  types.rs
libjuno/src/ir/builtins/: character.rs  memory.rs  memory_ops.rs  mod.rs  reading.rs  strings.rs  writing.rs
libjuno/src/metair/: coercion.rs  expr.rs  generator.rs  intern.rs  lookup.rs  metair.rs  metairgen.rs  mod.rs  ops.rs  program.rs  scope.rs  stmt.rs  types.rs
libjuno/src/parser/: expr_parser.rs  item_parser.rs  mod.rs  parser.rs  stmt_parser.rs  type_parser.rs
libjuno/tests/: all.rs
libjuno/tests/ir/: backend.rs  declaration.rs  error.rs  expr.rs  function.rs  mod.rs  runtime.rs  scope.rs  stmt.rs  structs.rs  types.rs
libjuno/tests/ir/utils/: mod.rs
libjuno/tests/wrapper/: compiler.rs  diagnostics.rs  mod.rs  test_file_utils.rs  testing_files.rs
libjuno/tests/wrapper/ir/: declaration.rs  error.rs  function.rs  mod.rs  runtime.rs  stmt.rs  structs.rs  (+1 more)
(+29 files in other folders)
