[package]
name = "libjuno"
include = [
    "**/*.rs",
    "**/*.pest"
]
description = "Library for JunoLang"

version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
inkwell = {workspace = true, optional = true}
llvm-sys = {workspace = true, optional = true}
pest.workspace = true
pest_derive.workspace = true
phf.workspace = true
phf_macros.workspace = true


[features]
grammar = []

ast = ["grammar"]

metair = ["ast"]

irgen = ["metair",
    "inkwell",
    "llvm-sys",
]

compiler = ["irgen"]

all = ["compiler"]